sharkbit/sharkbitParser.cpp

// Generated from sharkbit.g4 by ANTLR 4.7


#include "sharkbitListener.h"
#include "sharkbitVisitor.h"

#include "sharkbitParser.h"


using namespace antlrcpp;
using namespace antlr4;

sharkbitParser::sharkbitParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

sharkbitParser::~sharkbitParser() {
  delete _interpreter;
}

std::string sharkbitParser::getGrammarFileName() const {
  return "sharkbit.g4";
}

const std::vector<std::string>& sharkbitParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& sharkbitParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

sharkbitParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

sharkbitParser::DeclListContext* sharkbitParser::ProgramContext::declList() {
  return getRuleContext<sharkbitParser::DeclListContext>(0);
}


size_t sharkbitParser::ProgramContext::getRuleIndex() const {
  return sharkbitParser::RuleProgram;
}

void sharkbitParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void sharkbitParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any sharkbitParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sharkbitVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

sharkbitParser::ProgramContext* sharkbitParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, sharkbitParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    declList(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclListContext ------------------------------------------------------------------

sharkbitParser::DeclListContext::DeclListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

sharkbitParser::DeclContext* sharkbitParser::DeclListContext::decl() {
  return getRuleContext<sharkbitParser::DeclContext>(0);
}

sharkbitParser::DeclListContext* sharkbitParser::DeclListContext::declList() {
  return getRuleContext<sharkbitParser::DeclListContext>(0);
}


size_t sharkbitParser::DeclListContext::getRuleIndex() const {
  return sharkbitParser::RuleDeclList;
}

void sharkbitParser::DeclListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclList(this);
}

void sharkbitParser::DeclListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclList(this);
}


antlrcpp::Any sharkbitParser::DeclListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sharkbitVisitor*>(visitor))
    return parserVisitor->visitDeclList(this);
  else
    return visitor->visitChildren(this);
}


sharkbitParser::DeclListContext* sharkbitParser::declList() {
   return declList(0);
}

sharkbitParser::DeclListContext* sharkbitParser::declList(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  sharkbitParser::DeclListContext *_localctx = _tracker.createInstance<DeclListContext>(_ctx, parentState);
  sharkbitParser::DeclListContext *previousContext = _localctx;
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, sharkbitParser::RuleDeclList, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(85);
    decl();
    _ctx->stop = _input->LT(-1);
    setState(91);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<DeclListContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleDeclList);
        setState(87);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(88);
        decl(); 
      }
      setState(93);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

sharkbitParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

sharkbitParser::CoutDeclContext* sharkbitParser::DeclContext::coutDecl() {
  return getRuleContext<sharkbitParser::CoutDeclContext>(0);
}

sharkbitParser::VarDeclContext* sharkbitParser::DeclContext::varDecl() {
  return getRuleContext<sharkbitParser::VarDeclContext>(0);
}

sharkbitParser::FunDeclContext* sharkbitParser::DeclContext::funDecl() {
  return getRuleContext<sharkbitParser::FunDeclContext>(0);
}


size_t sharkbitParser::DeclContext::getRuleIndex() const {
  return sharkbitParser::RuleDecl;
}

void sharkbitParser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void sharkbitParser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}


antlrcpp::Any sharkbitParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sharkbitVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

sharkbitParser::DeclContext* sharkbitParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 4, sharkbitParser::RuleDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(97);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case sharkbitParser::COUT: {
        enterOuterAlt(_localctx, 1);
        setState(94);
        coutDecl();
        break;
      }

      case sharkbitParser::DOUBLE:
      case sharkbitParser::INT:
      case sharkbitParser::STRING:
      case sharkbitParser::CHAR:
      case sharkbitParser::CONST:
      case sharkbitParser::LIST:
      case sharkbitParser::BOOL:
      case sharkbitParser::IP:
      case sharkbitParser::ADDRESS:
      case sharkbitParser::FILE:
      case sharkbitParser::PROTOCOL:
      case sharkbitParser::POINTER:
      case sharkbitParser::ID:
      case sharkbitParser::PORT: {
        enterOuterAlt(_localctx, 2);
        setState(95);
        varDecl();
        break;
      }

      case sharkbitParser::FUNCTION: {
        enterOuterAlt(_localctx, 3);
        setState(96);
        funDecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

sharkbitParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

sharkbitParser::ConstSpecContext* sharkbitParser::VarDeclContext::constSpec() {
  return getRuleContext<sharkbitParser::ConstSpecContext>(0);
}

sharkbitParser::TypeDecContext* sharkbitParser::VarDeclContext::typeDec() {
  return getRuleContext<sharkbitParser::TypeDecContext>(0);
}

sharkbitParser::VarDeclInitContext* sharkbitParser::VarDeclContext::varDeclInit() {
  return getRuleContext<sharkbitParser::VarDeclInitContext>(0);
}

tree::TerminalNode* sharkbitParser::VarDeclContext::SEMICOLON() {
  return getToken(sharkbitParser::SEMICOLON, 0);
}


size_t sharkbitParser::VarDeclContext::getRuleIndex() const {
  return sharkbitParser::RuleVarDecl;
}

void sharkbitParser::VarDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDecl(this);
}

void sharkbitParser::VarDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDecl(this);
}


antlrcpp::Any sharkbitParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sharkbitVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

sharkbitParser::VarDeclContext* sharkbitParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 6, sharkbitParser::RuleVarDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    constSpec();
    setState(100);
    typeDec();
    setState(101);
    varDeclInit();
    setState(102);
    match(sharkbitParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclInitContext ------------------------------------------------------------------

sharkbitParser::VarDeclInitContext::VarDeclInitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

sharkbitParser::VarDeclIdContext* sharkbitParser::VarDeclInitContext::varDeclId() {
  return getRuleContext<sharkbitParser::VarDeclIdContext>(0);
}

tree::TerminalNode* sharkbitParser::VarDeclInitContext::ASSIGN() {
  return getToken(sharkbitParser::ASSIGN, 0);
}

sharkbitParser::MathExpContext* sharkbitParser::VarDeclInitContext::mathExp() {
  return getRuleContext<sharkbitParser::MathExpContext>(0);
}


size_t sharkbitParser::VarDeclInitContext::getRuleIndex() const {
  return sharkbitParser::RuleVarDeclInit;
}

void sharkbitParser::VarDeclInitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDeclInit(this);
}

void sharkbitParser::VarDeclInitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDeclInit(this);
}


antlrcpp::Any sharkbitParser::VarDeclInitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sharkbitVisitor*>(visitor))
    return parserVisitor->visitVarDeclInit(this);
  else
    return visitor->visitChildren(this);
}

sharkbitParser::VarDeclInitContext* sharkbitParser::varDeclInit() {
  VarDeclInitContext *_localctx = _tracker.createInstance<VarDeclInitContext>(_ctx, getState());
  enterRule(_localctx, 8, sharkbitParser::RuleVarDeclInit);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(109);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(104);
      varDeclId();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(105);
      varDeclId();
      setState(106);
      match(sharkbitParser::ASSIGN);
      setState(107);
      mathExp();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclIdContext ------------------------------------------------------------------

sharkbitParser::VarDeclIdContext::VarDeclIdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* sharkbitParser::VarDeclIdContext::ID() {
  return getToken(sharkbitParser::ID, 0);
}

tree::TerminalNode* sharkbitParser::VarDeclIdContext::LS() {
  return getToken(sharkbitParser::LS, 0);
}

tree::TerminalNode* sharkbitParser::VarDeclIdContext::RS() {
  return getToken(sharkbitParser::RS, 0);
}


size_t sharkbitParser::VarDeclIdContext::getRuleIndex() const {
  return sharkbitParser::RuleVarDeclId;
}

void sharkbitParser::VarDeclIdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDeclId(this);
}

void sharkbitParser::VarDeclIdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDeclId(this);
}


antlrcpp::Any sharkbitParser::VarDeclIdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sharkbitVisitor*>(visitor))
    return parserVisitor->visitVarDeclId(this);
  else
    return visitor->visitChildren(this);
}

sharkbitParser::VarDeclIdContext* sharkbitParser::varDeclId() {
  VarDeclIdContext *_localctx = _tracker.createInstance<VarDeclIdContext>(_ctx, getState());
  enterRule(_localctx, 10, sharkbitParser::RuleVarDeclId);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(115);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(111);
      match(sharkbitParser::ID);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(112);
      match(sharkbitParser::ID);
      setState(113);
      match(sharkbitParser::LS);
      setState(114);
      match(sharkbitParser::RS);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CoutDeclContext ------------------------------------------------------------------

sharkbitParser::CoutDeclContext::CoutDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* sharkbitParser::CoutDeclContext::COUT() {
  return getToken(sharkbitParser::COUT, 0);
}

tree::TerminalNode* sharkbitParser::CoutDeclContext::ID() {
  return getToken(sharkbitParser::ID, 0);
}

tree::TerminalNode* sharkbitParser::CoutDeclContext::SEMICOLON() {
  return getToken(sharkbitParser::SEMICOLON, 0);
}

sharkbitParser::MathExpContext* sharkbitParser::CoutDeclContext::mathExp() {
  return getRuleContext<sharkbitParser::MathExpContext>(0);
}


size_t sharkbitParser::CoutDeclContext::getRuleIndex() const {
  return sharkbitParser::RuleCoutDecl;
}

void sharkbitParser::CoutDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCoutDecl(this);
}

void sharkbitParser::CoutDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCoutDecl(this);
}


antlrcpp::Any sharkbitParser::CoutDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sharkbitVisitor*>(visitor))
    return parserVisitor->visitCoutDecl(this);
  else
    return visitor->visitChildren(this);
}

sharkbitParser::CoutDeclContext* sharkbitParser::coutDecl() {
  CoutDeclContext *_localctx = _tracker.createInstance<CoutDeclContext>(_ctx, getState());
  enterRule(_localctx, 12, sharkbitParser::RuleCoutDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(124);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(117);
      match(sharkbitParser::COUT);
      setState(118);
      match(sharkbitParser::ID);
      setState(119);
      match(sharkbitParser::SEMICOLON);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(120);
      match(sharkbitParser::COUT);
      setState(121);
      mathExp();
      setState(122);
      match(sharkbitParser::SEMICOLON);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstSpecContext ------------------------------------------------------------------

sharkbitParser::ConstSpecContext::ConstSpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* sharkbitParser::ConstSpecContext::CONST() {
  return getToken(sharkbitParser::CONST, 0);
}


size_t sharkbitParser::ConstSpecContext::getRuleIndex() const {
  return sharkbitParser::RuleConstSpec;
}

void sharkbitParser::ConstSpecContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstSpec(this);
}

void sharkbitParser::ConstSpecContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstSpec(this);
}


antlrcpp::Any sharkbitParser::ConstSpecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sharkbitVisitor*>(visitor))
    return parserVisitor->visitConstSpec(this);
  else
    return visitor->visitChildren(this);
}

sharkbitParser::ConstSpecContext* sharkbitParser::constSpec() {
  ConstSpecContext *_localctx = _tracker.createInstance<ConstSpecContext>(_ctx, getState());
  enterRule(_localctx, 14, sharkbitParser::RuleConstSpec);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(128);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case sharkbitParser::CONST: {
        enterOuterAlt(_localctx, 1);
        setState(126);
        match(sharkbitParser::CONST);
        break;
      }

      case sharkbitParser::DOUBLE:
      case sharkbitParser::INT:
      case sharkbitParser::STRING:
      case sharkbitParser::CHAR:
      case sharkbitParser::LIST:
      case sharkbitParser::BOOL:
      case sharkbitParser::IP:
      case sharkbitParser::ADDRESS:
      case sharkbitParser::FILE:
      case sharkbitParser::PROTOCOL:
      case sharkbitParser::POINTER:
      case sharkbitParser::ID:
      case sharkbitParser::PORT: {
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeSpecContext ------------------------------------------------------------------

sharkbitParser::TypeSpecContext::TypeSpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* sharkbitParser::TypeSpecContext::INT() {
  return getToken(sharkbitParser::INT, 0);
}

tree::TerminalNode* sharkbitParser::TypeSpecContext::BOOL() {
  return getToken(sharkbitParser::BOOL, 0);
}

tree::TerminalNode* sharkbitParser::TypeSpecContext::DOUBLE() {
  return getToken(sharkbitParser::DOUBLE, 0);
}

tree::TerminalNode* sharkbitParser::TypeSpecContext::STRING() {
  return getToken(sharkbitParser::STRING, 0);
}

tree::TerminalNode* sharkbitParser::TypeSpecContext::IP() {
  return getToken(sharkbitParser::IP, 0);
}

tree::TerminalNode* sharkbitParser::TypeSpecContext::PROTOCOL() {
  return getToken(sharkbitParser::PROTOCOL, 0);
}

tree::TerminalNode* sharkbitParser::TypeSpecContext::ADDRESS() {
  return getToken(sharkbitParser::ADDRESS, 0);
}

tree::TerminalNode* sharkbitParser::TypeSpecContext::FILE() {
  return getToken(sharkbitParser::FILE, 0);
}

tree::TerminalNode* sharkbitParser::TypeSpecContext::PORT() {
  return getToken(sharkbitParser::PORT, 0);
}

tree::TerminalNode* sharkbitParser::TypeSpecContext::CHAR() {
  return getToken(sharkbitParser::CHAR, 0);
}

sharkbitParser::ListContext* sharkbitParser::TypeSpecContext::list() {
  return getRuleContext<sharkbitParser::ListContext>(0);
}


size_t sharkbitParser::TypeSpecContext::getRuleIndex() const {
  return sharkbitParser::RuleTypeSpec;
}

void sharkbitParser::TypeSpecContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeSpec(this);
}

void sharkbitParser::TypeSpecContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeSpec(this);
}


antlrcpp::Any sharkbitParser::TypeSpecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sharkbitVisitor*>(visitor))
    return parserVisitor->visitTypeSpec(this);
  else
    return visitor->visitChildren(this);
}

sharkbitParser::TypeSpecContext* sharkbitParser::typeSpec() {
  TypeSpecContext *_localctx = _tracker.createInstance<TypeSpecContext>(_ctx, getState());
  enterRule(_localctx, 16, sharkbitParser::RuleTypeSpec);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(142);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case sharkbitParser::INT: {
        enterOuterAlt(_localctx, 1);
        setState(130);
        match(sharkbitParser::INT);
        break;
      }

      case sharkbitParser::BOOL: {
        enterOuterAlt(_localctx, 2);
        setState(131);
        match(sharkbitParser::BOOL);
        break;
      }

      case sharkbitParser::DOUBLE: {
        enterOuterAlt(_localctx, 3);
        setState(132);
        match(sharkbitParser::DOUBLE);
        break;
      }

      case sharkbitParser::STRING: {
        enterOuterAlt(_localctx, 4);
        setState(133);
        match(sharkbitParser::STRING);
        break;
      }

      case sharkbitParser::IP: {
        enterOuterAlt(_localctx, 5);
        setState(134);
        match(sharkbitParser::IP);
        break;
      }

      case sharkbitParser::PROTOCOL: {
        enterOuterAlt(_localctx, 6);
        setState(135);
        match(sharkbitParser::PROTOCOL);
        break;
      }

      case sharkbitParser::ADDRESS: {
        enterOuterAlt(_localctx, 7);
        setState(136);
        match(sharkbitParser::ADDRESS);
        break;
      }

      case sharkbitParser::FILE: {
        enterOuterAlt(_localctx, 8);
        setState(137);
        match(sharkbitParser::FILE);
        break;
      }

      case sharkbitParser::PORT: {
        enterOuterAlt(_localctx, 9);
        setState(138);
        match(sharkbitParser::PORT);
        break;
      }

      case sharkbitParser::CHAR: {
        enterOuterAlt(_localctx, 10);
        setState(139);
        match(sharkbitParser::CHAR);
        break;
      }

      case sharkbitParser::LIST: {
        enterOuterAlt(_localctx, 11);
        setState(140);
        list();
        break;
      }

      case sharkbitParser::POINTER:
      case sharkbitParser::LR:
      case sharkbitParser::GREATER:
      case sharkbitParser::ID: {
        enterOuterAlt(_localctx, 12);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ListContext ------------------------------------------------------------------

sharkbitParser::ListContext::ListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* sharkbitParser::ListContext::LIST() {
  return getToken(sharkbitParser::LIST, 0);
}

tree::TerminalNode* sharkbitParser::ListContext::LESS() {
  return getToken(sharkbitParser::LESS, 0);
}

sharkbitParser::TypeSpecContext* sharkbitParser::ListContext::typeSpec() {
  return getRuleContext<sharkbitParser::TypeSpecContext>(0);
}

tree::TerminalNode* sharkbitParser::ListContext::GREATER() {
  return getToken(sharkbitParser::GREATER, 0);
}


size_t sharkbitParser::ListContext::getRuleIndex() const {
  return sharkbitParser::RuleList;
}

void sharkbitParser::ListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterList(this);
}

void sharkbitParser::ListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<sharkbitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitList(this);
}


antlrcpp::Any sharkbitParser::ListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<sharkbitVisitor*>(visitor))
    return parserVisitor->visitList(this);
  else
    return visitor->visitChildren(this);
}

sharkbitParser::ListContext* sharkbitParser::list() {
  ListContext *_localctx = _tracker.createInstance<ListContext>(_ctx, getState());
  enterRule(_localctx, 18, sharkbitParser::RuleList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(144);
    match(sharkbitParser::LIST);
    setState(145);
    match(sharkbitParser::LESS);
    setState(146);
    typeSpec();
    setState(147);
    match(sharkbitParser::GREATER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDecContext ------------------------------------------------------------------

sharkbitParser::TypeDecContext::TypeDecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

sharkbitParser::TypeSpecContext* sharkbitParser::TypeDecContext::typeSpec() {
  return getRuleContext<sharkbitParser::TypeSpecContext>(0);
}

sharkbitParser::PointerDecContext* sharkbitParser::TypeDecContext::pointerDec() {
  return getRuleContext<sharkbitParser::PointerDecContext>(0);
}


size_t sharkbitParser::TypeDecContext::getRuleIndex() const {
